# gevent

./: .coveragerc  .coveragerc-pypy  .deepsource.toml  .gitignore  .hgignore  .hgtags  .landscape.yml  .pep8  .pylintrc  .readthedocs.yml  .travis.yml  AUTHORS  CHANGES  CHANGES.rst  CONTRIBUTING.rst  LICENSE  LICENSE.pyevent  MANIFEST.in  Makefile  Makefile.ext  NOTICE  README.eventlet  README.rst  TODO  _setupares.py  _setuplibev.py  _setuplibuv.py  _setuputils.py  appveyor.yml  changelog.rst  ci-requirements.txt  dev-requirements.txt  fetch_libevent.py  known_failures.py  known_failures.txt  pyproject.toml  rtd-requirements.txt  setup.cfg  setup.py  tox.ini  (+1 more)
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: issue_template.md
.github/workflows/: ci.yml
appveyor/: install.ps1  make.cmd  run_with_env.cmd
benchmarks/: .gitignore  bench_dns_resolver.py  bench_get_memory.py  bench_hub.py  bench_local.py  bench_pool.py  bench_queue.py  bench_sendall.py  bench_sleep0.py  bench_socket.py  bench_spawn.py  bench_subprocess.py  bench_threadpool.py  bench_tracer.py  micro.sh  micro_greenlet_link.sh  micro_run_callback.sh  micro_semaphore.sh  micro_sleep.sh
c-ares/: AUTHORS  CHANGELOG.git  CHANGES  Makefile.am  Makefile.in  Makefile.inc  Makefile.msvc  RELEASE-NOTES  ares.h  ares_build.h  ares_config.h.in  ares_create_query.c  ares_data.h  ares_dup.3  ares_gethostbyaddr.c  ares_gethostbyname.c  ares_getnameinfo.c  ares_init.3  ares_init.c  ares_private.h  ares_process.c  ares_query.c  ares_send.c  ares_set_local_dev.3  ares_set_servers.3  ares_version.h  config-win32.h  configure  configure.ac  gitinfo  libcares.pc
debian/: control  rules
doc/: Makefile  _about.rst  changelog.rst  changelog_1_0.rst  changelog_1_1.rst  changelog_1_2.rst  changelog_pre.rst  community.rst  conf.py  configuration.rst  contents.rst  dns.rst  fixindex.py  generate_rst.py  gevent.core.rst  gevent.dns.rst  gevent.evdns.rst  gevent.event.rst  gevent.http.rst  gevent.hub.rst  gevent.monkey.rst  gevent.pool.rst  gevent.pywsgi.rst  gevent.queue.rst  gevent.rawgreenlet.rst  gevent.resolver.ares.rst  gevent.resolver.blocking.rst  gevent.resolver.thread.rst  gevent.rst  gevent.socket.rst  gevent.ssl.rst  gevent.threadpool.rst  gevent.util.rst  gevent.wsgi.rst  index.rst  install.rst  intro.rst  loop_impls.rst  lowlevel.rst  monitoring.rst  (+10 more)
doc/_static/: index.css_t
doc/_templates/: contentstable.html  index.html
doc/api/: gevent._socket3.rst  gevent._ssl2.rst  gevent._sslgte279.rst  gevent.backdoor.rst  gevent.baseserver.rst  gevent.builtins.rst  gevent.core.rst  gevent.exceptions.rst  gevent.greenlet.rst  gevent.hub.rst  gevent.pool.rst  gevent.pywsgi.rst  gevent.rst  gevent.select.rst  gevent.signal.rst  gevent.socket.rst  gevent.subprocess.rst  gevent.threadpool.rst  gevent.timeout.rst  gevent.wsgi.rst  index.rst
doc/examples/: concurrent_download.rst  dns_mass_resolve.rst  echoserver.rst  geventsendfile.rst  index.rst  psycopg2_pool.rst  unixsocket_client.rst  webpy.rst  wsgiserver_ssl.rst
doc/mytheme/: layout.html  theme.conf
docs/: Makefile  _about.rst  changelog.rst  changelog_1_0.rst  changelog_1_1.rst  changelog_1_2.rst  changelog_1_3.rst  changelog_1_4.rst  changelog_1_5.rst  changelog_pre.rst  community.rst  conf.py  contents.rst  development.rst  dns.rst  index.rst  install.rst  installing_from_source.rst  intro.rst  loop_impls.rst  make.bat  monitoring.rst  mysphinxext.py  older_releases.rst  servers.rst  sfc.rst  success.rst  whatsnew_1_3.rst  whatsnew_1_4.rst  whatsnew_1_5.rst
docs/_static/: custom.css
docs/_templates/: hr-between-versions.rst.tmpl  layout.html
docs/api/: gevent._socket2.rst  gevent._socket3.rst  gevent._ssl3.rst  gevent.ares.rst  gevent.contextvars.rst  gevent.event.rst  gevent.events.rst  gevent.fileobject.rst  gevent.greenlet.rst  gevent.hub.rst  gevent.local.rst  gevent.lock.rst  gevent.monkey.rst  gevent.os.rst  gevent.queue.rst  gevent.resolver.dnspython.rst  gevent.rst  gevent.selectors.rst  gevent.ssl.rst  (+10 more)
examples/: bench_spawn.py  bottle.py  bottleapp.py  concurrent_download.py  connect.py  dns.py  dns_mass_resolve.py  echoserver.py  geventsendfile.py  httpserver.py  multiple_threads.py  pool.py  portforwarder.py  processes.py  psycopg2_pool.py  threadpool.py  udp_client.py  udp_server.py  unixsocket_client.py  unixsocket_server.py  webproxy.py  webpy.py  wsgi.py  wsgiserver.py  wsgiserver_ssl.py
gevent/: __init__.py  _compat.py  _corecffi_build.py  _fileobject2.py  _fileobject3.py  _fileobjectcommon.py  _fileobjectposix.py  _semaphore.pxd  _semaphore.py  _semaphore.pyx  _socket.py  _socket2.py  _socket3.py  _socketcommon.py  _ssl2.py  _ssl3.py  _sslgte279.py  _tblib.py  _threading.py  _util.py  _util.pyx  _util_py2.py  _util_py3.py  ares.pyx  backdoor.py  baseserver.py  builtins.py  callbacks.c  callbacks.h  cares.pxd  cares.pxi  cares_ntop.h  cares_pton.h  core.c  core.ppyx  core.py  core.pyx  core_.pyx  corecext.ppyx  corecffi.py  (+51 more)
greentest/: .coveragerc  __init__.py  _import_import_patch.py  _import_wait.py  api_test.py  bench_sendall.py  bench_sleep0.py  bench_spawn.py  clean_db.py  coros_test.py  expected_failures.txt  generate_report.py  greenio_test.py  greentest.py  helper.py  lock_tests.py  monkey_test.py  mysubprocess.py  parse_results.py  patched_tests_setup.py  record_results.py  runall.py  six.py  test__GreenletExit.py  test___example_servers.py  test___monkey_patching.py  test__all__.py  test__api.py  test__api_timeout.py  test__ares_host_result.py  test__asyncresult.py  test__backdoor.py  test__benchmarks.py  test__core.py  test__core_active_event.py  test__core_async.py  test__core_callback.py  test__core_fork.py  test__core_loop_run.py  test__core_loop_run_sig_mod.py  (+141 more)
libev/: Changes  Makefile.in  config.guess  config.sub  configure  ev.3  ev.c  ev.h  ev_epoll.c  ev_kqueue.c  ev_select.c  ev_vars.h  ev_win32.c  ev_wrap.h  ltmain.sh
scripts/: gprospector.py  install.sh  travis.py
util/: cython_ifdef.py  cythonpp.py  make_dist.py  makedeb.sh  makedist.py  pyflakes.py  set_version.py  stat.py  virtualbox.py  wintest.py  winvbox.py
(+794 files in other folders)
