[build-system]
build-backend = "setuptools.build_meta"
# Build dependencies. Remember to change these in make-manylinux and appveyor.yml
# if you add/remove/change them.
requires = [
     "setuptools >= 40.8.0",

     "Cython >= 3.2.1",
     # See version requirements in setup.py
     "cffi >= 1.17.1 ; platform_python_implementation == 'CPython'",
     # Python 3.7 requires at least 0.4.14, which is ABI incompatible with earlier
     # releases. Python 3.9 and 3.10 require 0.4.16;
     # 0.4.17 is ABI incompatible with earlier releases, but compatible with 1.0
     # 1.1.3 is needed for CPython 3.11.
     # 2.0 is not ABI compatible with earlier releases, but with luck it won't
     # have to break the ABI again.
     # 3.0 is ABI compatible with earlier releases, so we can switch back and
     # forth between 2 and 3 without recompiling. 3.0 is required for
     # Python 3.12, and it fixes some serious bugs in Python 3.11.
     # 3.2 is the first to support Python 3.14a7.
     # 3.2.2 is needed for Python 3.14b1.
     "greenlet >= 3.2.2 ; platform_python_implementation == 'CPython'",
]

[tool.towncrier]
directory = "docs/changes"
filename = "CHANGES.rst"
package = "gevent"
package_dir = "src"
issue_format = "See :issue:`{issue}`."
title_format = false
template = "docs/_templates/hr-between-versions.rst.tmpl"
