[bdist_wheel]
universal = 0

[zest.releaser]
python-file-with-version = src/gevent/__init__.py
create-wheel = no
prereleaser.middle =
    gevent._util.prereleaser_middle
postreleaser.before =
    gevent._util.postreleaser_before

[metadata]
long_description_content_type = text/x-rst

[check-manifest]
ignore =
    src/gevent/*.c
    src/gevent/*.html
    src/gevent/libev/corecext.h
    src/gevent/libev/corecext.html
    src/gevent/_generated_include/*.h
    src/gevent/_generated_include
